CLIENT/CodeAssessMetadata/main/default/objects/Question__c/Question__c.object-meta.xml
<CustomObject>
    <label>Question</label>
    <nameField>
        <label>Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>