CLIENT/CodeAssessMetadata/main/default/objects/Question__c/fields/PlaceHolder__c.field-meta.xml
<CustomField>
    <fullName>PlaceHolder__c</fullName>
    <label>PlaceHolder</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>