CLIENT/CodeAssessMetadata/main/default/objects/Question__c/fields/Prompt__c.field-meta.xml
<CustomField>
    <fullName>Prompt__c</fullName>
    <label>Prompt</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>