CLIENT/CodeAssessMetadata/main/default/objects/Question__c/fields/QuestionTopic__c.field-meta.xml
<CustomField>
    <fullName>QuestionTopic__c</fullName>
    <label>QuestionTopic</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QuestionTopics</valueSetName>
    </valueSet>
</CustomField>