CLIENT/CodeAssessMetadata/main/default/objects/Question__c/fields/TestClassText__c.field-meta.xml
<CustomField>
    <fullName>TestClassText__c</fullName>
    <label>TestClassText</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>